fixed comment box spacing

--- a/public/stylesheets/card.css
+++ b/public/stylesheets/card.css
@@ -748,7 +748,6 @@ div.search-result-list .search-result-item {
 
 /*---------- comment-box -------------------------------------- */
 .comment-box textarea { 
-    width: 100%; 
     margin-bottom:5px;
 }   
 .comment-box input {
